# haskell-dependency-injection

./: dependency-injection.hs  proj-dependency-injection.cabal  stack.yaml
app/: Main.hs
