name:                proj-dependency-injection
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/wizek/proj-dependency-injection#readme
license:             BSD3
license-file:        LICENSE
author:              Milán Nagy
maintainer:          123.wizek@gmail.com
copyright:           2016 Milán Nagy
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable proj-dependency-injection
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , proj-dependency-injection
                     , containers
  default-language:    Haskell2010

test-suite proj-dependency-injection-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , proj-dependency-injection
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wizek/proj-dependency-injection
